--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -69,6 +69,7 @@
 }
 
 .toplogo #video {
+  display: block;
   // Fix for IE11:
   max-width: (@container-large-desktop - (@grid-gutter-width *2)); // 1018px;
 }
