Search box colour

--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -132,11 +132,7 @@
 // Find en forsker search box
 
 .find-researcher {
-  #gradient >.horizontal(#bebec0, #b0b2b6);
-
-  .search-text {
-    color: #565656;
-  }
+  #gradient >.horizontal(#bbb, @gray-999);
 }
 // Find på KUnet
 
