Slider arrow focus

--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -198,8 +198,8 @@
   outline: none;
   background: transparent;
 
-  &:focus-visible, &:-moz-focusring {
-    .tab-focus-v2();
+  &:focus, &:-moz-focusring {
+    .tab-focus();
   }
 
   &:focus,
