Slider arrow focus

--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -195,7 +195,8 @@
   cursor: pointer;
   color: transparent;
   border: none;
-  outline: none;
+  // outline: none;
+  .tab-focus();
   background: transparent;
 
   &:focus, &:-moz-focusring {
