Slider arrow focus

--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -1,5 +1,4 @@
 /* Slider */
-
 .gallery-nav,
 .slide-gallery,
 .slideshow {
@@ -332,7 +331,7 @@
       }
 
       &:focus {
-        outline: none;
+        .tab-focus();
 
         &:before {
           opacity: 1;
