--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -209,9 +209,7 @@
 
   &:focus {
     .tab-focus();
-    // &::before {
-    //   .tab-focus();
-    // }
+    outline-offset: -1px;
   }
 
   &::before {
@@ -301,26 +299,24 @@
   li {
     position: relative;
     display: inline-block;
-    width: 6px;
-    height: 6px;
+
     margin: 0 3px;
     padding: 0;
     cursor: pointer;
-    background: rgba(@gray-base, 0.3);
-    border-radius: 50%;
 
     button {
       font-size: 0;
       line-height: 0;
       display: block;
-      width: 100%;
-      height: 100%;
+      width: 6px;
+      height: 6px;
       padding: 5px;
       cursor: pointer;
       color: transparent;
       border: 0;
       outline: none;
-      background: transparent;
+      background: rgba(@gray-base, 0.3);
+      border-radius: 50%;
 
       &:hover {
         outline: none;
@@ -341,10 +337,12 @@
   }
 
   .slick-active {
-    background: rgba(@gray-base, 0.5);
+    button {
+      background: rgba(@gray-base, 0.5);
 
-    &:focus-within {
-      .tab-focus();
+      &:focus-within {
+        .tab-focus();
+      }
     }
   }
 }
