--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -317,13 +317,13 @@
       background: rgba(@gray-base, 0.3);
       border-radius: 50%;
 
-      &:hover {
-        outline: none;
-
-        &:before {
-          opacity: 1;
-        }
-      }
+      // &:hover {
+      //   outline: none;
+      //
+      //   &:before {
+      //     opacity: 1;
+      //   }
+      // }
 
       &:focus {
         .tab-focus();
