--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -308,6 +308,7 @@ form.gdpr-accept {
 }
 
 .image-presentation {
+  height: @gridbox1;
   // Element for static images with text overlay just like slick slider - just not sliding:
   .slick-slide {
     display: block;
