--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -208,7 +208,7 @@
   }
 
   &:focus {
-    .tab-focus();
+    .tab-focus-v2();
     outline-offset: -1px;
   }
 
@@ -243,7 +243,7 @@
   border-radius: 50%;
 
   &:focus {
-    .tab-focus();
+    .tab-focus-v2();
   }
 
   .glyphicon {
@@ -253,6 +253,7 @@
 }
 
 .slick-slider {
+  .slick-arrow:focus & {
   &:hover {
     .slick-prev {
       left: 0;
@@ -270,6 +271,7 @@
         content: @icon-arrow;
       }
     }
+  }
 
     .slick-prev.slick-disabled {
       &:before {
