--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -198,7 +198,6 @@
   cursor: pointer;
   color: transparent;
   border: none;
-  // outline: none;
   background: transparent;
 
   &:focus,
@@ -339,7 +338,7 @@
       border-radius: 50%;
 
       &:focus {
-        .tab-focus();
+        .tab-focus-v2();
         outline-offset: 2px;
       }
     }
