--- a/less/mixins/buttons.less
+++ b/less/mixins/buttons.less
@@ -14,7 +14,7 @@
     background-color: darken(@background, 10%);
         border-color: darken(@border, 25%);
   }
-  &:hover, &:visited {
+  &:hover {
     color: @color;
     background-color: darken(@background, 10%);
         border-color: darken(@border, 12%);
