--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -80,8 +80,10 @@ a {
     .tab-focus();
   }
 
-  &:visited {
-    color: @link-visited-color;
+  &:not(.btn) {
+    &:visited {
+      color: @link-visited-color;
+    }
   }
 }
 
