--- a/less/mixins/buttons.less
+++ b/less/mixins/buttons.less
@@ -19,6 +19,9 @@
     background-color: darken(@background, 10%);
         border-color: darken(@border, 12%);
   }
+  &:visited {
+    color: @color;
+  }
   &:active,
   &.active,
   .open > .dropdown-toggle {
