--- a/less/mixins/buttons.less
+++ b/less/mixins/buttons.less
@@ -19,8 +19,10 @@
     background-color: darken(@background, 10%);
         border-color: darken(@border, 12%);
   }
-  &:visited {
-    color: @color;
+  a & {
+    &:visited  {
+      color: @color;
+    }
   }
   &:active,
   &.active,
