--- a/less/mixins/buttons.less
+++ b/less/mixins/buttons.less
@@ -19,11 +19,14 @@
     background-color: darken(@background, 10%);
         border-color: darken(@border, 12%);
   }
-  a & {
+
+  // KU speciifc
+  a& {
     &:visited  {
       color: @color;
     }
   }
+  //
   &:active,
   &.active,
   .open > .dropdown-toggle {
