--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -47,6 +47,7 @@ body {
   flex-direction: column;
   height: 100%;
   position: relative;
+  direction: ltr;
   @media (max-width: @screen-xs-max) {
     -webkit-overflow-scrolling: touch;
     font-size: @font-size-body;
