--- a/less/wells.less
+++ b/less/wells.less
@@ -18,6 +18,11 @@
     border-color: #ddd;
     border-color: rgba(0,0,0,.15);
   }
+  h2, h3 {
+    &:first-of-type {
+      margin-top: 0;
+    }
+  }
 }
 // Sizes
 
