--- a/less/wells.less
+++ b/less/wells.less
@@ -18,7 +18,9 @@
     border-color: #ddd;
     border-color: rgba(0,0,0,.15);
   }
-  h2, h3 {
+
+  h2,
+  h3 {
     &:first-of-type {
       margin-top: 0;
     }
