--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -57,7 +57,7 @@
   &:hover {
     .control-layer {
       display: block;
-      background: rgba(@gray-base, .5);
+      background: linear-gradient(to bottom, rgba(@gray-base,0) 0%,rgba(@gray-base,0.65) 100%);
     }
   }
 
@@ -80,8 +80,24 @@
   z-index: 2147483647;
 }
 
+.progress {
+  height: 5px;
+}
+
+.progress-track {
+  display: inline-block;
+  color: @white-color;
+  opacity: .8;
+
+}
+
 .media-controls button {
   font-size: 14px;
+  color: @white-color;
+  color: transparent;
+  border: 0;
+  outline: 0;
+
   &:focus {
     .tab-focus-v2();
   }
