Updating video controls

--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -82,6 +82,7 @@
 
 .progress {
   height: 5px;
+  margin-bottom: 10px;
 }
 
 .progress-track {
@@ -94,7 +95,7 @@
 .media-controls button {
   font-size: 14px;
   color: @white-color;
-  color: transparent;
+  background: transparent;
   border: 0;
   outline: 0;
 
