--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -50,7 +50,7 @@
   width: 100%;
   left: 0;
   bottom: 0;
-  padding: 15px;
+  padding: 10px;
 }
 
 .toplogo {
@@ -81,8 +81,8 @@
 }
 
 .progress {
-  height: 5px;
-  margin-bottom: 10px;
+  height: 4px;
+  margin-bottom: 5px;
 }
 
 .progress-track {
@@ -119,7 +119,7 @@
 }
 @media all and (min-width: @screen-sm) {
   .media-controls button {
-    font-size: inherit;
+    font-size: 16px;
   }
 }
 // Enable for subtitles menu
