--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -80,10 +80,14 @@
   z-index: 2147483647;
 }
 
-.progress {
-  height: 4px;
-  margin-bottom: 5px;
-}
+// .progress {
+//   height: 4px;
+//   margin-bottom: 5px;
+// }
+//
+// .progress:hover {
+//   height: 5px;
+// }
 
 .progress-track {
   display: inline-block;
