--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -153,55 +153,72 @@
 //     }
 //   }
 // }
+
+/*Chrome*/
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+    input[type='range'] {
+      overflow: hidden;
+      width: 80px;
+      -webkit-appearance: none;
+      background-color: #9a905d;
+    }
+
+    input[type='range']::-webkit-slider-runnable-track {
+      height: 10px;
+      -webkit-appearance: none;
+      color: #13bba4;
+      margin-top: -1px;
+    }
+
+    input[type='range']::-webkit-slider-thumb {
+      width: 10px;
+      -webkit-appearance: none;
+      height: 10px;
+      cursor: ew-resize;
+      background: #434343;
+      box-shadow: -80px 0 0 80px #43e5f7;
+    }
+
+}
+/** FF*/
+input[type="range"]::-moz-range-progress {
+  background-color: #43e5f7;
+}
+input[type="range"]::-moz-range-track {
+  background-color: #9a905d;
+}
+/* IE*/
+input[type="range"]::-ms-fill-lower {
+  background-color: #43e5f7;
+}
+input[type="range"]::-ms-fill-upper {
+  background-color: #9a905d;
+}
 // Make input range visible in IE - why, oh why...
 
-input[type=range]::-ms-track {
-  width: 200px;
-  height: 10px;
-  background: transparent;
-  border-color: transparent;
-  border-width: 6px 0;
-  color: transparent;
-}
-
-/* Special styling for WebKit/Blink */
-input[type=range]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  border: 1px solid #000000;
-  height: 36px;
-  width: 16px;
-  border-radius: 3px;
-  background: #ffffff;
-  cursor: pointer;
-  margin-top: -14px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; /* Add cool effects to your sliders! */
-}
-
-/* All the same stuff for Firefox */
-input[type=range]::-moz-range-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  border: 1px solid #000000;
-  height: 36px;
-  width: 16px;
-  border-radius: 3px;
-  background: #ffffff;
-  cursor: pointer;
-}
-
-input[type=range]::-ms-thumb {
-  border: none;
-  height: 16px;
-  width: 16px;
-  border-radius: 50%;
-  background: @gray-ddd;
-}
-
-input[type=range]::-ms-fill-upper {
-  background: @gray-ddd;
-  border-radius: 6px;
-}
-
-input[type=range]::-ms-fill-lower {
-  background: @gray-ddd;
-  border-radius: 6px;
-}
+// input[type=range]::-ms-track {
+//   width: 200px;
+//   height: 10px;
+//   background: transparent;
+//   border-color: transparent;
+//   border-width: 6px 0;
+//   color: transparent;
+// }
+//
+// input[type=range]::-ms-thumb {
+//   border: none;
+//   height: 16px;
+//   width: 16px;
+//   border-radius: 50%;
+//   background: @gray-ddd;
+// }
+//
+// input[type=range]::-ms-fill-upper {
+//   background: @gray-ddd;
+//   border-radius: 6px;
+// }
+//
+// input[type=range]::-ms-fill-lower {
+//   background: @gray-ddd;
+//   border-radius: 6px;
+// }
