--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -153,46 +153,94 @@
 //     }
 //   }
 // }
-
-/*Chrome*/
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-    input[type='range'] {
-      overflow: hidden;
-      width: 80px;
-      -webkit-appearance: none;
-      background-color: #9a905d;
-    }
-
-    input[type='range']::-webkit-slider-runnable-track {
-      height: 10px;
-      -webkit-appearance: none;
-      color: #13bba4;
-      margin-top: -1px;
-    }
-
-    input[type='range']::-webkit-slider-thumb {
-      width: 10px;
-      -webkit-appearance: none;
-      height: 10px;
-      cursor: ew-resize;
-      background: #434343;
-      box-shadow: -80px 0 0 80px #43e5f7;
-    }
-
+input[type=range] {
+  height: 20px;
+  -webkit-appearance: none;
+  margin: 10px 0;
+  width: 100%;
 }
-/** FF*/
-input[type="range"]::-moz-range-progress {
-  background-color: #43e5f7;
+input[type=range]:focus {
+  outline: none;
 }
-input[type="range"]::-moz-range-track {
-  background-color: #9a905d;
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 5px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 0px 0px 0px #000000;
+  background: #39808E;
+  border-radius: 1px;
+  border: 0px solid #000000;
 }
-/* IE*/
-input[type="range"]::-ms-fill-lower {
-  background-color: #43e5f7;
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 0px 0px 0px #000000;
+  border: 1px solid #2497E3;
+  height: 13px;
+  width: 13px;
+  border-radius: 50px;
+  background: #39808e;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -4.5px;
 }
-input[type="range"]::-ms-fill-upper {
-  background-color: #9a905d;
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #39808E;
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 5px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 0px 0px 0px #000000;
+  background: #39808E;
+  border-radius: 1px;
+  border: 0px solid #000000;
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 0px 0px 0px #000000;
+  border: 1px solid #2497E3;
+  height: 13px;
+  width: 13px;
+  border-radius: 50px;
+  background: #39808e;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 5px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #39808E;
+  border: 0px solid #000000;
+  border-radius: 2px;
+  box-shadow: 0px 0px 0px #000000;
+}
+input[type=range]::-ms-fill-upper {
+  background: #39808E;
+  border: 0px solid #000000;
+  border-radius: 2px;
+  box-shadow: 0px 0px 0px #000000;
+}
+input[type=range]::-ms-thumb {
+  margin-top: 1px;
+  box-shadow: 0px 0px 0px #000000;
+  border: 1px solid #2497E3;
+  height: 13px;
+  width: 13px;
+  border-radius: 50px;
+  background: #39808e;
+  cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #39808E;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #39808E;
 }
 // Make input range visible in IE - why, oh why...
 
