--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -153,95 +153,80 @@
 //     }
 //   }
 // }
-input[type=range] {
-  height: 20px;
-  -webkit-appearance: none;
-  margin: 10px 0;
-  width: 100%;
+
+input[type="range"] {
+    margin: auto;
+    -webkit-appearance: none;
+    position: relative;
+    overflow: hidden;
+    height: 40px;
+    width: 200px;
+    cursor: pointer;
+    border-radius: 0; /* iOS */
 }
-input[type=range]:focus {
-  outline: none;
+
+input[type="range"]::-webkit-slider-runnable-track {
+    background: #ddd;
 }
-input[type=range]::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 5px;
-  cursor: pointer;
-  animate: 0.2s;
-  box-shadow: 0px 0px 0px #000000;
-  background: #39808E;
-  border-radius: 1px;
-  border: 0px solid #000000;
+
+/*
+ * 1. Set to 0 width and remove border for a slider without a thumb
+ */
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 20px; /* 1 */
+    height: 40px;
+    background: #fff;
+    box-shadow: -100vw 0 0 100vw dodgerblue;
+    border: 2px solid #999; /* 1 */
 }
-input[type=range]::-webkit-slider-thumb {
-  box-shadow: 0px 0px 0px #000000;
-  border: 1px solid #2497E3;
-  height: 13px;
-  width: 13px;
-  border-radius: 50px;
-  background: #39808e;
-  cursor: pointer;
-  -webkit-appearance: none;
-  margin-top: -4.5px;
+
+input[type="range"]::-moz-range-track {
+    height: 40px;
+    background: #ddd;
 }
-input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #39808E;
+
+input[type="range"]::-moz-range-thumb {
+    background: #fff;
+    height: 40px;
+    width: 20px;
+    border: 3px solid #999;
+    border-radius: 0 !important;
+    box-shadow: -100vw 0 0 100vw dodgerblue;
+    box-sizing: border-box;
 }
-input[type=range]::-moz-range-track {
-  width: 100%;
-  height: 5px;
-  cursor: pointer;
-  animate: 0.2s;
-  box-shadow: 0px 0px 0px #000000;
-  background: #39808E;
-  border-radius: 1px;
-  border: 0px solid #000000;
+
+input[type="range"]::-ms-fill-lower {
+    background: dodgerblue;
 }
-input[type=range]::-moz-range-thumb {
-  box-shadow: 0px 0px 0px #000000;
-  border: 1px solid #2497E3;
-  height: 13px;
-  width: 13px;
-  border-radius: 50px;
-  background: #39808e;
-  cursor: pointer;
+
+input[type="range"]::-ms-thumb {
+    background: #fff;
+    border: 2px solid #999;
+    height: 40px;
+    width: 20px;
+    box-sizing: border-box;
 }
-input[type=range]::-ms-track {
-  width: 100%;
-  height: 5px;
-  cursor: pointer;
-  animate: 0.2s;
-  background: transparent;
-  border-color: transparent;
-  color: transparent;
+
+input[type="range"]::-ms-ticks-after {
+    display: none;
 }
-input[type=range]::-ms-fill-lower {
-  background: #39808E;
-  border: 0px solid #000000;
-  border-radius: 2px;
-  box-shadow: 0px 0px 0px #000000;
+
+input[type="range"]::-ms-ticks-before {
+    display: none;
 }
-input[type=range]::-ms-fill-upper {
-  background: #39808E;
-  border: 0px solid #000000;
-  border-radius: 2px;
-  box-shadow: 0px 0px 0px #000000;
+
+input[type="range"]::-ms-track {
+    background: #ddd;
+    color: transparent;
+    height: 40px;
+    border: none;
 }
-input[type=range]::-ms-thumb {
-  margin-top: 1px;
-  box-shadow: 0px 0px 0px #000000;
-  border: 1px solid #2497E3;
-  height: 13px;
-  width: 13px;
-  border-radius: 50px;
-  background: #39808e;
-  cursor: pointer;
+
+input[type="range"]::-ms-tooltip { 
+    display: none;
 }
-input[type=range]:focus::-ms-fill-lower {
-  background: #39808E;
-}
-input[type=range]:focus::-ms-fill-upper {
-  background: #39808E;
-}
+
 // Make input range visible in IE - why, oh why...
 
 // input[type=range]::-ms-track {
