--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -83,8 +83,7 @@
 .progress-track {
   display: inline-block;
   color: @white-color;
-  opacity: .8;
-
+  opacity: 0.8;
 }
 
 .media-controls button {
@@ -98,11 +97,9 @@
     .tab-focus-v2();
   }
 }
-
 // .media-controls button + button {
 //   margin-left: 5px;
 // }
-
 // .media-controls {
 //   // Audio slider
 //   input[type=range] {
@@ -144,35 +141,41 @@
 //     }
 //   }
 // }
-
-// .progress {
-//   height: 4px;
-//   margin-bottom: 5px;
-// }
 //
 // .progress:hover {
 //   height: 5px;
 // }
-.progress:hover .progress-bar,
-.progress.hover .progress-bar { height: 8px; }
-.progress:hover .progress-bar::-webkit-slider-thumb,
-.progress.hover .progress-bar::-webkit-slider-thumb {
+
+.loaded.progress-bar::-webkit-slider-thumb {
+  transition: 0.1s ease-in;
+}
+
+.progress {
+  height: 3px;
+  margin-bottom: 5px;
+}
+
+.progress:hover .progress-bar {
+  height: 8px;
+}
+
+.progress.hover .progress-bar::-webkit-slider-thumb,
+.progress:hover .progress-bar::-webkit-slider-thumb {
   width: 16px;
   height: 16px;
 }
+
 .progress-bar {
   -webkit-appearance: none;
-  background: linear-gradient(to right,
-    #cc181e 0%, #cc181e 50%,
-    #777 50%, #777 62.5%,
-    #444 62.5%, #444 100%);
+  background: linear-gradient(to right, #cc181e 0%, #cc181e 50%, #777 50%, #777 62.5%, #444 62.5%, #444 100%);
   cursor: pointer;
   height: 3px;
   margin: 0;
-  transitionx: 0.1s ease-in;
+  transition: 0.1s ease-in;
   vertical-align: bottom;
   width: 100%;
 }
+
 .progress-bar::-webkit-slider-thumb {
   -webkit-appearance: none;
   background: #aeaeae;
@@ -183,7 +186,6 @@
   width: 0;
 }
 // Make input range visible in IE - why, oh why...
-
 // input[type=range]::-ms-track {
 //   width: 200px;
 //   height: 10px;
