--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -142,17 +142,13 @@
 //   }
 // }
 //
-// .progress:hover {
-//   height: 5px;
-// }
-
-.loaded.progress-bar::-webkit-slider-thumb {
-  transition: 0.1s ease-in;
-}
 
 .progress {
   height: 3px;
-  margin-bottom: 5px;
+  margin-bottom: 0;
+  padding: 12px 0;
+  background: transparent;
+  box-shadow: none;
 }
 
 .progress-bar {
@@ -162,7 +158,6 @@
   height: 3px;
   margin: 0;
   transition: 0.1s ease-in;
-  vertical-align: bottom;
   width: 100%;
 }
 
