--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -142,15 +142,18 @@
 //   }
 // }
 //
-
+.fullscreen {
+  float: right;
+}
 .progress {
   height: 3px;
   margin-bottom: 0;
-  padding: 12px 0;
   background: transparent;
   box-shadow: none;
 }
-
+.progress:hover {
+  padding: 12px 0;
+}
 .progress-bar {
   -webkit-appearance: none;
   background: linear-gradient(to right, #cc181e 0%, #cc181e 50%, #777 50%, #777 62.5%, #444 62.5%, #444 100%);
