--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -50,7 +50,7 @@
   width: 100%;
   left: 0;
   bottom: 0;
-  padding: 10px;
+  padding: 8px 10px;
 }
 
 .toplogo {
@@ -75,7 +75,6 @@
 }
 
 .media-controls {
-  margin-top: 5px;
   /* For Safari 5.1 */
   z-index: 2147483647;
 }
@@ -90,98 +89,63 @@
   font-size: 14px;
   color: @white-color;
   background: transparent;
+  padding: 0;
   border: 0;
   outline: 0;
+  cursor: pointer;
 
   &:focus {
     .tab-focus-v2();
   }
-}
-// .media-controls button + button {
-//   margin-left: 5px;
-// }
-// .media-controls {
-//   // Audio slider
-//   input[type=range] {
-//     display: inline-block;
-//     //width: auto;
-//     vertical-align: middle;
-//     -webkit-tap-highlight-color: transparent;
-//   }
-// }
-@media all and (min-width: @screen-sm) {
-  .media-controls button {
+  @media all and (min-width: @screen-sm) {
     font-size: 18px;
   }
 }
-// Enable for subtitles menu
-// .subtitles-menu {
-//   display: none;
-//   position: absolute;
-//   bottom: 0;
-//   right: 0;
-//   background: @gray-666;
-//   list-style-type: none;
-//   margin: 0;
-//   padding: 0;
-//   width: 100px;
-//   padding: 10px;
-//
-//   li {
-//     padding: 0;
-//     text-align: center;
-//
-//     button {
-//       border: none;
-//       background: @gray-base;
-//       color: @white-color;
-//       cursor: pointer;
-//       width: 90%;
-//       padding: 2px 5px;
-//     }
-//   }
-// }
-//
-.fullscreen {
-  float: right;
-}
-.progress {
-  height: 3px;
-  margin-bottom: 0;
-  background: transparent;
-  box-shadow: none;
-}
-.progress:hover {
-  padding: 12px 0;
-}
-.progress-bar {
-  -webkit-appearance: none;
-  background: linear-gradient(to right, #cc181e 0%, #cc181e 50%, #777 50%, #777 62.5%, #444 62.5%, #444 100%);
-  cursor: pointer;
-  height: 3px;
-  margin: 0;
-  transition: 0.1s ease-in;
-  width: 100%;
-}
 
-.progress-bar::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  background: #aeaeae;
-  border-radius: 8px;
-  box-shadow: inset 0 0 0 5px #eaeaea;
-  height: 0;
-  transitionx: 0.1s ease-in;
-  width: 0;
-}
+.media-controls {
+  .fullscreen {
+    float: right;
+  }
 
-.progress:hover .progress-bar {
-  height: 8px;
-}
+  .progress {
+    height: 3px;
+    padding: 4px 0 12px;
+    margin-bottom: 0;
+    background: transparent;
+    box-shadow: none;
+  }
 
-.progress.hover .progress-bar::-webkit-slider-thumb,
-.progress:hover .progress-bar::-webkit-slider-thumb {
-  width: 16px;
-  height: 16px;
+  .progress-bar {
+    -webkit-appearance: none;
+    background: linear-gradient(to right, #cc181e 0%, #cc181e 50%, #777 50%, #777 62.5%, @gray-444 62.5%, @gray-444 100%);
+    cursor: pointer;
+    height: 3px;
+    margin: 0;
+    transition: 0.1s ease-in;
+    width: 100%;
+    vertical-align: middle;
+    -webkit-tap-highlight-color: transparent;
+  }
+
+  .progress-bar::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    background: #aeaeae;
+    border-radius: 8px;
+    box-shadow: inset 0 0 0 5px #eaeaea;
+    height: 0;
+    transition: 0.1s ease-in;
+    width: 0;
+  }
+
+  .progress:hover .progress-bar {
+    height: 8px;
+  }
+
+  .progress.hover .progress-bar::-webkit-slider-thumb,
+  .progress:hover .progress-bar::-webkit-slider-thumb {
+    width: 16px;
+    height: 16px;
+  }
 }
 // Make input range visible in IE - why, oh why...
 // input[type=range]::-ms-track {
@@ -210,3 +174,31 @@
 //   background: @gray-ddd;
 //   border-radius: 6px;
 // }
+// Enable for subtitles menu
+// .subtitles-menu {
+//   display: none;
+//   position: absolute;
+//   bottom: 0;
+//   right: 0;
+//   background: @gray-666;
+//   list-style-type: none;
+//   margin: 0;
+//   padding: 0;
+//   width: 100px;
+//   padding: 10px;
+//
+//   li {
+//     padding: 0;
+//     text-align: center;
+//
+//     button {
+//       border: none;
+//       background: @gray-base;
+//       color: @white-color;
+//       cursor: pointer;
+//       width: 90%;
+//       padding: 2px 5px;
+//     }
+//   }
+// }
+//
