--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -78,6 +78,8 @@
   display: inline-block;
   color: @white-color;
   opacity: 0.8;
+  height: 26px;
+  vertical-align: middle;
 }
 
 .media-controls {
