--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -131,36 +131,36 @@
     width: 100%;
     vertical-align: middle;
     -webkit-tap-highlight-color: transparent;
+
+    &::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      background: #aeaeae;
+      border-radius: 8px;
+      box-shadow: inset 0 0 0 5px #eaeaea;
+      height: 0;
+      transition: 0.1s ease-in;
+      width: 0;
+    }
+
+    &::-ms-thumb {
+      background: #aeaeae;
+      box-shadow: inset 0 0 0 5px #eaeaea;
+      height: 13px;
+      width: 13px;
+      border-radius: 50%;
+      transition: 0.1s ease-in;
+    }
   }
 
-  .progress-bar::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    background: #aeaeae;
-    border-radius: 8px;
-    box-shadow: inset 0 0 0 5px #eaeaea;
-    height: 0;
-    transition: 0.1s ease-in;
-    width: 0;
-  }
+  .progress:hover {
+    .progress-bar {
+      height: 8px;
 
-  .progress-bar::-ms-thumb {
-    background: #aeaeae;
-    border-radius: 8px;
-    box-shadow: inset 0 0 0 5px #eaeaea;
-    height: 13px;
-    width: 13px;
-    border-radius: 50%;
-    transition: 0.1s ease-in;
-  }
-
-  .progress:hover .progress-bar {
-    height: 8px;
-  }
-
-  .progress.hover .progress-bar::-webkit-slider-thumb,
-  .progress:hover .progress-bar::-webkit-slider-thumb {
-    width: 16px;
-    height: 16px;
+      &::-webkit-slider-thumb {
+        width: 16px;
+        height: 16px;
+      }
+    }
   }
 }
 // Make input range visible in IE
