Finishing video controls

--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -157,7 +157,7 @@
     &::-ms-ticks,
     &::-ms-ticks-after,
     &::-ms-ticks-before {
-      display: none;
+      color: transparent;
     }
 
     &::-ms-thumb {
