Finishing video controls

--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -145,6 +145,12 @@
       width: 0;
     }
 
+    &::-ms-track {
+      background: transparent;
+      border-color: transparent;
+      color: transparent;
+    }
+
     &::-ms-fill-lower,
     &::-ms-fill-upper,
     &::-ms-track {
@@ -155,6 +161,7 @@
     &::-ms-ticks-after,
     &::-ms-ticks-before {
       color: transparent;
+      background: transparent;
     }
 
     &::-ms-thumb {
