--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -169,7 +169,7 @@
       box-shadow: inset 0 0 0 5px #eaeaea;
       height: 13px;
       width: 13px;
-      border-radius: 50%;
+      border-radius: 13px;
       transition: 0.1s ease-in;
     }
   }
