--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -75,11 +75,12 @@
 }
 
 .progress-track {
-  display: inline-block;
   color: @white-color;
   opacity: 0.8;
   height: 26px;
+  line-height: normal;
   vertical-align: middle;
+  margin-bottom: 0;
 }
 
 .media-controls {
@@ -121,6 +122,9 @@
     margin-bottom: 0;
     background: transparent;
     box-shadow: none;
+    &:focus {
+      outline: none;
+    }
   }
 
   .progress-bar {
@@ -134,6 +138,9 @@
     vertical-align: middle;
     box-shadow: none;
     -webkit-tap-highlight-color: transparent;
+    &:focus {
+      outline: none;
+    }
 
     &::-webkit-slider-thumb {
       -webkit-appearance: none;
