Video audio detection

--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -196,8 +196,8 @@
 }
 
 .volume {
-  width: 150px;
-  display: inline-block;
+  width: 150px!important;
+  display: inline-block!important;
   -webkit-appearance: none;
   -webkit-tap-highlight-color: transparent;
   border-radius: 6px;
