--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -196,12 +196,14 @@
 }
 
 .volume {
-  width: 150px!important;
+  position: relative;
+  top: -4px;
+  width: 100px!important;
   display: inline-block!important;
   -webkit-appearance: none;
   -webkit-tap-highlight-color: transparent;
-  border-radius: 6px;
-  height: 6px;
+  border-radius: 3px;
+  height: 3px;
   background-image: -webkit-gradient(linear, left top, right top, color-stop(0.15, @white-color), color-stop(0.15, #C5C5C5));
 
   &::-webkit-slider-thumb {
@@ -210,7 +212,9 @@
     border: 1px solid #CECECE;
     height: 12px;
     width: 12px;
+    border-radius: 6px;
   }
+
   &::-ms-track {
     background: transparent;
     border-color: transparent;
