--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -204,15 +204,19 @@
   -webkit-tap-highlight-color: transparent;
   border-radius: 3px;
   height: 3px;
-  background-image: -webkit-gradient(linear, left top, right top, color-stop(0.15, @white-color), color-stop(0.15, #C5C5C5));
+  background-image: -webkit-gradient(linear, left top, right top, color-stop(0.50, @white-color), color-stop(0.50, #C5C5C5));
+
+  &:focus {
+    outline: none;
+  }
 
   &::-webkit-slider-thumb {
     -webkit-appearance: none;
     background-color: #E9E9E9;
     border: 1px solid #CECECE;
-    height: 12px;
-    width: 12px;
-    border-radius: 6px;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
     transition: 0.1s ease-in;
   }
 
@@ -238,8 +242,8 @@
   &::-ms-thumb {
     background: #aeaeae;
     box-shadow: inset 0 0 0 5px #eaeaea;
-    height: 13px;
-    width: 13px;
+    height: 10px;
+    width: 10px;
     border-radius: 13px;
     transition: 0.1s ease-in;
   }
