Video audio detection

--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -204,7 +204,7 @@
   -webkit-tap-highlight-color: transparent;
   border-radius: 3px;
   height: 3px;
-  background-image: -webkit-gradient(linear, left top, right top, color-stop(0.50, @white-color), color-stop(0.50, #C5C5C5));
+  background: -webkit-gradient(left, @white-color 50%, #c5c5c5 50%);
 
   &:focus {
     outline: none;
