--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -197,14 +197,14 @@
 
 .volume {
   position: relative;
-  top: -4px;
+  top: -6px;
   width: 100px!important;
   display: inline-block!important;
   -webkit-appearance: none;
   -webkit-tap-highlight-color: transparent;
   border-radius: 3px;
   height: 3px;
-  background: -webkit-gradient(left, @white-color 50%, #c5c5c5 50%);
+  background: -webkit-gradient(linear, left top, right top, color-stop(50%, @white-color), color-stop(50%, #C5C5C5));
 
   &:focus {
     outline: none;
