--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -212,12 +212,12 @@
 
   &::-webkit-slider-thumb {
     -webkit-appearance: none;
-    background-color: #E9E9E9;
-    border: 1px solid #CECECE;
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
+    background: #aeaeae;
+    border-radius: 8px;
+    box-shadow: inset 0 0 0 5px #eaeaea;
+    height: 0;
     transition: 0.1s ease-in;
+    width: 0;
   }
 
   &::-ms-track {
