--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -210,14 +210,14 @@
     outline: none;
   }
 
-  &::-webkit-slider-thumb {
+  &::-webkit-slider-thumb, &::-moz-range-thumb {
     -webkit-appearance: none;
-    background: #aeaeae;
-    border-radius: 8px;
-    box-shadow: inset 0 0 0 5px #eaeaea;
-    height: 0;
+    background-color: #E9E9E9;
+    border: 1px solid #CECECE;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
     transition: 0.1s ease-in;
-    width: 0;
   }
 
   &::-ms-track {
