Video audio range

--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -210,7 +210,7 @@
     outline: none;
   }
 
-  &::-webkit-slider-thumb, &::-moz-range-thumb {
+  &::-webkit-slider-thumb {
     -webkit-appearance: none;
     background-color: #E9E9E9;
     border: 1px solid #CECECE;
