--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -123,16 +123,8 @@
     }
   }
 
-  .progress-bar {
+  input[type=range] {
     -webkit-appearance: none;
-    background: linear-gradient(to right, @ku-red 0%, @ku-red 50%, #777 50%, #777 62.5%, @gray-444 62.5%, @gray-444 100%);
-    cursor: pointer;
-    height: 3px;
-    margin: 0;
-    transition: 0.1s ease-in;
-    width: 100%;
-    vertical-align: middle;
-    box-shadow: none;
     -webkit-tap-highlight-color: transparent;
 
     &:focus {
@@ -141,12 +133,10 @@
 
     &::-webkit-slider-thumb {
       -webkit-appearance: none;
-      background: #aeaeae;
-      border-radius: 8px;
-      box-shadow: inset 0 0 0 5px #eaeaea;
-      height: 0;
-      transition: 0.1s ease-in;
-      width: 0;
+    }
+
+    &::-ms-tooltip {
+      display: none;
     }
 
     &::-ms-track {
@@ -177,6 +167,27 @@
       transition: 0.1s ease-in;
     }
   }
+
+  .progress-bar {
+    background: linear-gradient(to right, @ku-red 0%, @ku-red 50%, #777 50%, #777 62.5%, @gray-444 62.5%, @gray-444 100%);
+    cursor: pointer;
+    height: 3px;
+    margin: 0;
+    transition: 0.1s ease-in;
+    width: 100%;
+    vertical-align: middle;
+    box-shadow: none;
+    -webkit-tap-highlight-color: transparent;
+
+    &::-webkit-slider-thumb {
+      background: #aeaeae;
+      border-radius: 8px;
+      box-shadow: inset 0 0 0 5px #eaeaea;
+      height: 0;
+      transition: 0.1s ease-in;
+      width: 0;
+    }
+  }
   @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
     .progress-bar {
       padding: 2px;
@@ -200,18 +211,20 @@
   top: -6px;
   width: 100px!important;
   display: inline-block!important;
-  -webkit-appearance: none;
-  -webkit-tap-highlight-color: transparent;
   border-radius: 3px;
   height: 3px;
-  background: -webkit-gradient(linear, left top, right top, color-stop(50%, @white-color), color-stop(50%, #C5C5C5));
-
-  &:focus {
-    outline: none;
-  }
+  background: -webkit-gradient(linear, left top, right top, color-stop(50%, @white-color), color-stop(50%, @gray-light));
 
   &::-webkit-slider-thumb {
-    -webkit-appearance: none;
+    background-color: #E9E9E9;
+    border: 1px solid #CECECE;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    transition: 0.1s ease-in;
+  }
+
+  &::-moz-range-thumb {
     background-color: #E9E9E9;
     border: 1px solid #CECECE;
     height: 10px;
