--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -225,6 +225,7 @@
   border-radius: 3px;
   height: 3px;
   background: -webkit-gradient(linear, left top, right top, color-stop(50%, @white-color), color-stop(50%, @gray-light));
+  background: linear-gradient(to right, @white-color 0%, @gray-light 50%);
 
   &::-webkit-slider-thumb {
     background-color: #E9E9E9;
