--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -166,17 +166,6 @@
       border-radius: 13px;
       transition: 0.1s ease-in;
     }
-
-
-    // input[type=range]::-ms-fill-upper {
-    //   background: @gray-ddd;
-    //   border-radius: 6px;
-    // }
-    //
-    // input[type=range]::-ms-fill-lower {
-    //   background: @gray-ddd;
-    //   border-radius: 6px;
-    // }
   }
 
   .progress-bar {
@@ -224,8 +213,8 @@
   display: inline-block!important;
   border-radius: 3px;
   height: 3px;
-  background: -webkit-gradient(linear, left top, right top, color-stop(50%, @white-color), color-stop(50%, @gray-light));
-  background: linear-gradient(to right, @white-color 0%, @gray-light 50%);
+  //background: -webkit-gradient(linear, left top, right top, color-stop(50%, @white-color), color-stop(50%, @gray-light));
+  background: linear-gradient(to right, @white-color 50%, @gray-light 50%);
 
   &::-webkit-slider-thumb {
     background-color: #E9E9E9;
