--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -189,7 +189,8 @@
     }
   }
   @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-    .progress-bar, .volume {
+    .progress-bar,
+    .volume {
       padding: 2px;
     }
   }
@@ -213,8 +214,11 @@
   display: inline-block!important;
   border-radius: 3px;
   height: 3px;
-  //background: -webkit-gradient(linear, left top, right top, color-stop(50%, @white-color), color-stop(50%, @gray-light));
   background: linear-gradient(to right, @white-color 50%, @gray-light 50%);
+
+  &:hover {
+    height: 8px;
+  }
 
   &::-webkit-slider-thumb {
     background-color: #E9E9E9;
@@ -234,22 +238,23 @@
     transition: 0.1s ease-in;
   }
 
-  &::-ms-track {
-    width: 100px;
-    border-width: 6px 0;
-    height: 3px;
-    background: transparent;
-    border-color: transparent;
-    color: transparent;
-  }
-
-  &::-ms-fill-lower {
-    background: @white-color;
-  }
-  &::-ms-fill-upper,
-  &::-ms-track {
-    background: @gray-light;
-  }
+  // &::-ms-track {
+  //   width: 100px;
+  //   border-width: 6px 0;
+  //   height: 3px;
+  //   background: transparent;
+  //   border-color: transparent;
+  //   color: transparent;
+  // }
+  //
+  // &::-ms-fill-lower {
+  //   background: @white-color;
+  // }
+  //
+  // &::-ms-fill-upper,
+  // &::-ms-track {
+  //   background: @gray-light;
+  // }
 
   &::-ms-ticks,
   &::-ms-ticks-after,
