--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -215,6 +215,7 @@
   border-radius: 3px;
   height: 3px;
   background: linear-gradient(to right, @white-color 50%, @gray-light 50%);
+  transition: 0.1s ease-in;
 
   &:hover {
     height: 8px;
