--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -209,7 +209,7 @@
 
   &:focus {
     //visibility: visible;
-    .tab-focus-v2();
+    .tab-focus();
     outline-offset: -1px;
   }
 
@@ -257,7 +257,7 @@
   border-radius: 50%;
 
   &:focus {
-    .tab-focus-v2();
+    .tab-focus();
   }
 
   .glyphicon {
