--- a/less/variables.less
+++ b/less/variables.less
@@ -890,12 +890,12 @@
 
 //** Border color for elements within panels
 @panel-inner-border:          #ddd;
-@panel-footer-bg:             @gray-f5;
+@panel-footer-bg:             #f8f8f8;
 
 @panel-default-header-text:   #252525;
 @panel-default-text:          @gray-dark;
-@panel-default-border:        #d5d5d5;
-@panel-default-heading-bg:    @gray-f5;
+@panel-default-border:        #949494;
+@panel-default-heading-bg:    #f8f8f8;
 
 @panel-primary-text:          @white-color;
 @panel-primary-border:        @brand-primary;
