--- a/less/variables.less
+++ b/less/variables.less
@@ -890,12 +890,12 @@
 
 //** Border color for elements within panels
 @panel-inner-border:          #ddd;
-@panel-footer-bg:             #f8f8f8;
+@panel-footer-bg:             @gray-f5;
 
 @panel-default-header-text:   #252525;
 @panel-default-text:          @gray-dark;
-@panel-default-border:        #949494;
-@panel-default-heading-bg:    #f8f8f8;
+@panel-default-border:        #d5d5d5;
+@panel-default-heading-bg:    @gray-f5;
 
 @panel-primary-text:          @white-color;
 @panel-primary-border:        @brand-primary;
@@ -919,8 +919,8 @@
 
 // KU accordions
 @panel-accordion-text:           @text-color;
-@panel-accordion-border:         #ddd;
-@panel-accordion-heading-bg:     @gray-f5;
+@panel-accordion-border:         #949494;
+@panel-accordion-heading-bg:     #f8f8f8;
 
 
 //== Thumbnails
