Remove bottom margin for last items in grid columns

--- a/less/ku-cms-components.less
+++ b/less/ku-cms-components.less
@@ -137,6 +137,12 @@ nav {
   &.picture .title {
     display: none;
   }
+
+  * {
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
 
 .gccolumn {
