FACS og CFIM booking styles

--- a/docs/assets/css/doctypes/facsbooking.css
+++ b/docs/assets/css/doctypes/facsbooking.css
@@ -1,5 +1,5 @@
 /*============================================================================*/
-/* CFIM BOOKING STYLES                                                        */
+/* FACS BOOKING STYLES                                                        */
 /*============================================================================*/
 
 #cbook_nav {
