--- a/docs/assets/css/doctypes/cfimbooking.css
+++ b/docs/assets/css/doctypes/cfimbooking.css
@@ -5,6 +5,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  font-size: 12px;
 }
 
 #cbook_nav li {
@@ -85,6 +86,7 @@ a.button:hover,
   width: auto;
   border: none;
   clear: both;
+  border-collapse: separate;
 }
 
 #cbook_table td {
