--- a/less/panels.less
+++ b/less/panels.less
@@ -376,7 +376,7 @@
 
   & > .panel-heading {
     background-color: @panel-accordion-heading-bg;
-    padding: 0 30px 0 0;
+    padding: 0;
     position: relative;
     border: 0;
     &:focus-within {
@@ -392,10 +392,7 @@
 
       a {
         display: block;
-        padding: 8px 0 10px 10px;
-        &:focus {
-          outline: none;
-        }
+        padding: 8px 30px 10px 10px;
 
         &:before {
           .glyphicon;
